Omnibox UI Refresh: Don't disable bookmark bar for Refresh popup

The bookmark bar has historically been disabled when the Omnibox popup
was open. This was because the Omnibox popup was a full-width dropdown
that would cover any attached bookmark bar.

In that case, we don't want the top couple of pixels of the bookmark
bar to spuriously trigger any navigations if the user clicked on it.

For MD Refresh, where the dropdown covers the bookmark bar entirely
within the popup width, the above logic doesn't make sense.

We now let the bookmark bar be clickable even when the popup is open
if Material Refresh is on.

Bug: 875610
Change-Id: I3b79461ea4a4fcc21e79e22dbcf22c779abc3f99
Reviewed-on: https://chromium-review.googlesource.com/1184262
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585131}
Former-commit-id: 7f2d827b809b6ba2d5d30f7fa7760792b611e2fc